# openCern

./: .gitignore  docker-compose.yml  package-lock.json  package.json
.github/workflows/: api-compat.yml  changelog-check.yml  cli-ci.yml  cli-release.yml  compose-smoke.yml  deploy-worker.yml  docker-publish.yml  e2e.yml  launcher-ci.yml  launcher-mac-release.yml  launcher-release.yml  nightly.yml  npm-publish.yml  pr-check.yml  release.yml  security-scan.yml  ui-ci.yml
app/electron/: package-lock.json  package.json
app/launcher/: index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.tsbuildinfo
app/launcher-mac/: .gitignore  Package.swift  project.yml
app/launcher-mac/OpenCERN/: Info.plist
app/launcher-mac/OpenCERN.xcodeproj/: project.pbxproj
app/launcher/__tests__/: docker-socket.test.ts  ipc-handlers.test.ts  settings.test.ts  updater.test.ts
app/launcher/electron/: config.ts  containers.ts  custom.ts  docker.ts  ipc.ts  main.ts  preload.ts  setup.ts  updater.ts
app/launcher/electron-dist/: config.js  config.js.map  containers.js  containers.js.map  custom.js  custom.js.map  docker.js  docker.js.map  ipc.js  ipc.js.map  main.js  main.js.map  preload.js  preload.js.map  setup.js  setup.js.map  updater.js  updater.js.map
app/launcher/src/: App.tsx
app/launcher/src-tauri/: Cargo.toml  tauri.conf.json
app/launcher/src-tauri/capabilities/: default.json
app/launcher/src-tauri/icons/: icon.icns
app/launcher/src-tauri/src/: config.rs  containers.rs  custom.rs  docker.rs  lib.rs  main.rs  setup.rs  updater.rs
app/next-ui/: .eslintrc.json  eslint.config.mjs  package-lock.json  package.json  proxy.ts
app/next-ui/app/: ConvexClientProvider.jsx  GlobalState.js  ParticleVisualization.js  globals.css  layout.js  page.js
containers/api/: Dockerfile
containers/api/routers/: datasets.py  processing.py
containers/api/services/: catalog.py
containers/api/tests/: conftest.py  test_cors.py  test_datasets.py  test_downloads.py  test_files.py  test_health.py  test_processing.py
containers/cpp-processor/: CMakeLists.txt
containers/data-processor/: Dockerfile  main.py  requirements.txt
containers/data-processor/tests/: test_processor.py
containers/streaming/src/: main.rs
containers/streaming/tests/: test_streaming.rs
containers/xrootd/tests/: conftest.py  test_fetch.py
opencern-cli/: .gitignore  babel.config.json  eslint.config.mjs  package-lock.json  package.json  preload.ts  tsconfig.json
opencern-cli/quantum/tests/: conftest.py  test_backends.py  test_circuit.py  test_classify.py
opencern-cli/script/: build.ts
opencern-cli/sim/: CMakeLists.txt
opencern-cli/sim/src/: camera.cpp  camera.h  detector.cpp  detector.h  event_loader.cpp  event_loader.h  gui.cpp  gui.h  hud.cpp  hud.h  main.cpp  particles.cpp  particles.h  renderer.cpp  renderer.h  shader.cpp  shader.h
opencern-cli/sim/test-data/: sample.json
opencern-cli/src/: app.tsx
opencern-cli/src/__tests__/: app-routing.test.ts  bin.test.ts
opencern-cli/src/commands/: arg-parser.ts  auth.ts  config.ts  containers.ts  datasets.ts  dispatcher.ts  download.ts  files.ts  fitting.ts  help.ts  physics.ts  process.ts  profile.ts  registry.ts  session.ts  sim.ts  status.ts  system.ts  update.ts
opencern-cli/src/components/: AIStream.tsx  CommandPalette.tsx  DataTable.tsx  FilePreview.tsx  KeyboardShortcuts.tsx  Modal.tsx  ProgressBar.tsx  Prompt.tsx  QuantumPanel.tsx  SelectList.tsx  Spinner.tsx  StatusBar.tsx  Tabs.tsx  Toast.tsx
opencern-cli/src/services/: ai-tools.ts  ai-workflows.ts  aiSystemPrompt.ts  anthropic.ts  cern-api.ts  docker.ts  quantum.ts
opencern-cli/src/tui/: app.tsx
opencern-cli/tests/contract/: cli-to-api.contract.test.ts  cli-to-quantum.contract.test.ts
opencern-cli/tests/integration/: ai-tool-loop.test.ts  auth-e2e.test.ts  docker-lifecycle.test.ts  download-pipeline.test.ts  process-pipeline.test.ts  (+1 more)
scripts/: install-w.sh  install.sh  uninstall.sh
workers/auth-system/: package-lock.json  package.json
workers/cli-auth/: package-lock.json  package.json
workers/install/: package-lock.json  package.json  wrangler.toml
(+154 files in other folders)
